Each section opens on its own clean page while keeping your styles, scripts, and branding consistent.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sante Initiative - Vision Care for Uganda</title>
+    <title>About Us | Sante Initiative</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -85,37 +85,99 @@
     <!-- Off-Canvas Menu for Mobile -->
     <div class="off-canvas-menu" id="offCanvasMenu">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="approach.html">Approach</a></li>
-        <li><a href="programs.html">Programs</a></li>
-        <li><a href="glasses.html">Glasses</a></li>
-        <li><a href="get-involved.html">Get Involved</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#programs">Programs</a></li>
+        <li><a href="#gallery">Glasses</a></li>
+        <li><a href="#get-involved">Get Involved</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li></li>
       </ul>
       <!-- <a href="#donate" class="btn btn-secondary">Donate Now</a> -->
     </div>
     <div class="menu-overlay" id="menuOverlay"></div>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
+    <!-- About Section -->
+    <section class="about" id="about">
       <div class="container">
-        <div class="hero-content">
-          <h1>Sante Initiative</h1>
-          <p>
-            To increase access to reading glasses for people with presbyopia in
-            Uganda through
-            <strong>awareness campaigns</strong>,
-            <strong>accessible diagnostic tools</strong>, and
-            <strong>quality-assured distribution</strong>.
-          </p>
-          <!-- <div class="hero-btns">
-            <a href="#get-involved" class="btn btn-primary">Get Involved</a>
-            <a href="#about" class="btn btn-outline">Learn More</a>
-          </div> -->
+        <div class="about-content">
+          <div class="about-text">
+            <h2>About Us</h2>
+            <div class="mission-vision">
+              <h3>Our Vision</h3>
+              <p>
+                A Uganda where every individual, regardless of location or
+                income, has access to affordable, quality vision care—empowering
+                them to live with dignity, independence, and productivity.
+              </p>
+            </div>
+            <div class="mission-vision">
+              <h3>Our Mission</h3>
+              <p>
+                To restore and enhance vision among underserved and vulnerable
+                communities in Uganda by providing affordable, high-quality
+                reading glasses, leveraging community-based outreach, innovative
+                diagnostics, and inclusive financing models.
+              </p>
+            </div>
+          </div>
+          <div class="about-objectives">
+            <h2>Strategic Objectives</h2>
+            <div class="objectives-grid">
+              <div class="objective-card">
+                <h3><span>1</span> Increase Access</h3>
+                <p>
+                  Provide affordable reading glasses to at least 100,000 people
+                  in rural and peri-urban Uganda by 2030, focusing on
+                  communities with limited access to vision care services.
+                </p>
+              </div>
+              <div class="objective-card">
+                <h3><span>2</span> Raise Awareness</h3>
+                <p>
+                  Conduct targeted vision health education campaigns to
+                  demystify presbyopia, reduce stigma, and promote early
+                  self-diagnosis using digital and offline tools.
+                </p>
+              </div>
+              <div class="objective-card">
+                <h3><span>3</span> Empower Local Champions</h3>
+                <p>
+                  Train and deploy community health workers and local champions
+                  to lead outreach, screenings, and follow-up support in
+                  hard-to-reach areas.
+                </p>
+              </div>
+              <div class="objective-card">
+                <h3><span>4</span> Ensure Affordability</h3>
+                <p>
+                  Implement a hire purchase model and mobile money platforms to
+                  reduce financial barriers to vision correction.
+                </p>
+              </div>
+              <div class="objective-card">
+                <h3><span>5</span> Strengthen Local Systems</h3>
+                <p>
+                  Integrate reading glasses into existing health delivery
+                  structures, including drug shops, clinics, and local
+                  businesses, to build a sustainable and replicable distribution
+                  model.
+                </p>
+              </div>
+              <div class="objective-card">
+                <h3><span>6</span>Monitor Impact</h3>
+                <p>
+                  Continuously measure the initiative’s outcomes using key
+                  metrics such as reduction in untreated presbyopia, improved
+                  productivity, and Quality-Adjusted Life Years (QALYs) gained.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
     <div
       id="qlwapp"
       class="qlwapp-free qlwapp-button qlwapp-bottom-right qlwapp-all qlwapp-square qlwapp-js-ready desktop"
