--- a/approach.html
+++ b/approach.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sante Initiative - Vision Care for Uganda</title>
+    <title>Approach| Sante Initiative</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -92,30 +92,49 @@
         <li><a href="glasses.html">Glasses</a></li>
         <li><a href="get-involved.html">Get Involved</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li></li>
       </ul>
       <!-- <a href="#donate" class="btn btn-secondary">Donate Now</a> -->
     </div>
     <div class="menu-overlay" id="menuOverlay"></div>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
-      <div class="container">
-        <div class="hero-content">
-          <h1>Sante Initiative</h1>
+    <div class="distribution-model" id="approach">
+      <h2>Our Distribution Approach</h2>
+      <div class="distribution-steps">
+        <div class="step">
+          <span class="step-number">1</span>
+          <h3>Community Awareness</h3>
           <p>
-            To increase access to reading glasses for people with presbyopia in
-            Uganda through
-            <strong>awareness campaigns</strong>,
-            <strong>accessible diagnostic tools</strong>, and
-            <strong>quality-assured distribution</strong>.
+            As part of the 2024A Reading Glasses Challenge in Uganda, launched
+            on June 17, 2025, Sante Initiative is committed to increasing access
+            to non-prescription reading glasses. We raise awareness about
+            presbyopia by conducting educational sessions for health workers and
+            community members, and by developing informational materials such as
+            pamphlets, videos, and online content.
           </p>
-          <!-- <div class="hero-btns">
-            <a href="#get-involved" class="btn btn-primary">Get Involved</a>
-            <a href="#about" class="btn btn-outline">Learn More</a>
-          </div> -->
+        </div>
+        <div class="step">
+          <span class="step-number">2</span>
+          <h3>Accessible Diagnostics</h3>
+          <p>
+            To reach those in need, we utilize mobile apps with Snellen charts
+            and offer self-testing options for individuals with smartphones.
+            These diagnostic tools are also distributed to community drug shops
+            and clinics to help identify those with presbyopia more easily.
+          </p>
+        </div>
+        <div class="step">
+          <span class="step-number">3</span>
+          <h3>Quality Assurance</h3>
+          <p>
+            We ensure quality by providing high-standard reading glasses and
+            conducting periodic audits to confirm that prescriptions meet the
+            required guidelines. This guarantees that recipients get effective,
+            safe visual aids that truly improve their livelihoods.
+          </p>
         </div>
       </div>
-    </section>
+    </div>
     <div
       id="qlwapp"
       class="qlwapp-free qlwapp-button qlwapp-bottom-right qlwapp-all qlwapp-square qlwapp-js-ready desktop"
