--- a/get-involved.html
+++ b/get-involved.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sante Initiative - Vision Care for Uganda</title>
+    <title>Get Involved | Sante Initiative</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -97,22 +97,42 @@
     </div>
     <div class="menu-overlay" id="menuOverlay"></div>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
+    <!-- Get Involved Section -->
+    <section class="get-involved" id="get-involved">
       <div class="container">
-        <div class="hero-content">
-          <h1>Sante Initiative</h1>
-          <p>
-            To increase access to reading glasses for people with presbyopia in
-            Uganda through
-            <strong>awareness campaigns</strong>,
-            <strong>accessible diagnostic tools</strong>, and
-            <strong>quality-assured distribution</strong>.
-          </p>
-          <!-- <div class="hero-btns">
-            <a href="#get-involved" class="btn btn-primary">Get Involved</a>
-            <a href="#about" class="btn btn-outline">Learn More</a>
-          </div> -->
+        <h2>Get Involved</h2>
+        <p>Join us in making vision care accessible to everyone in Uganda</p>
+        <div class="involve-cards">
+          <div class="involve-card">
+            <div class="involve-icon">
+              <i class="fas fa-hands-helping"></i>
+            </div>
+            <h3>Volunteer</h3>
+            <p>
+              Join our team on the ground and make a direct impact in
+              communities across Uganda.
+            </p>
+            <a href="#" class="btn btn-outline" style="margin-top: 1.5rem"
+              >Join Us</a
+            >
+          </div>
+
+          <div class="involve-card">
+            <div class="involve-icon">
+              <i class="fas fa-handshake"></i>
+            </div>
+            <h3>Partnership</h3>
+            <p>
+              Partner with us to expand our reach and create sustainable impact
+              together.
+            </p>
+            <a
+              href="#contact"
+              class="btn btn-outline"
+              style="margin-top: 1.5rem"
+              >Partner With Us</a
+            >
+          </div>
         </div>
       </div>
     </section>
