--- a/glasses.html
+++ b/glasses.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sante Initiative - Vision Care for Uganda</title>
+    <title>Glasses| Sante Initiative</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -97,25 +97,27 @@
     </div>
     <div class="menu-overlay" id="menuOverlay"></div>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
+    <!-- Gallery Section -->
+    <section class="gallery" id="gallery">
       <div class="container">
-        <div class="hero-content">
-          <h1>Sante Initiative</h1>
-          <p>
-            To increase access to reading glasses for people with presbyopia in
-            Uganda through
-            <strong>awareness campaigns</strong>,
-            <strong>accessible diagnostic tools</strong>, and
-            <strong>quality-assured distribution</strong>.
-          </p>
-          <!-- <div class="hero-btns">
-            <a href="#get-involved" class="btn btn-primary">Get Involved</a>
-            <a href="#about" class="btn btn-outline">Learn More</a>
-          </div> -->
+        <h2>Explore Collection</h2>
+        <div class="gallery-grid">
+          <div class="gallery-item">
+            <img src="/img/Presbyopia3.jpg" alt="Santé Initiative" />
+          </div>
+          <div class="gallery-item">
+            <img src="/img/Presbyopia4.jpg" alt="Santé Initiative" />
+          </div>
+          <div class="gallery-item">
+            <img src="/img/Presbyopia5 (1).jpg" alt="Santé Initiative" />
+          </div>
+          <div class="gallery-item">
+            <img src="/img/Presbyopia2.jpg" alt="Santé Initiative" />
+          </div>
         </div>
       </div>
     </section>
+
     <div
       id="qlwapp"
       class="qlwapp-free qlwapp-button qlwapp-bottom-right qlwapp-all qlwapp-square qlwapp-js-ready desktop"
