--- a/programs.html
+++ b/programs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sante Initiative - Vision Care for Uganda</title>
+    <title>Programs| Sante Initiative</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -97,25 +97,66 @@
     </div>
     <div class="menu-overlay" id="menuOverlay"></div>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
+    <!-- Programs Section -->
+    <section class="programs" id="programs">
       <div class="container">
-        <div class="hero-content">
-          <h1>Sante Initiative</h1>
-          <p>
-            To increase access to reading glasses for people with presbyopia in
-            Uganda through
-            <strong>awareness campaigns</strong>,
-            <strong>accessible diagnostic tools</strong>, and
-            <strong>quality-assured distribution</strong>.
-          </p>
-          <!-- <div class="hero-btns">
-            <a href="#get-involved" class="btn btn-primary">Get Involved</a>
-            <a href="#about" class="btn btn-outline">Learn More</a>
-          </div> -->
+        <h2>Our Programs</h2>
+        <div class="program-cards">
+          <div class="program-card">
+            <div
+              class="program-img"
+              style="
+                background: url('/img/presbyopic-eye-diagram.webp') center/cover;
+              "
+            ></div>
+            <div class="program-content">
+              <h3>Presbyopia Awareness</h3>
+              <p>
+                Community education and informational materials to demystify
+                vision challenges
+              </p>
+              <a href="#" class="btn btn-outline" style="margin-top: 1rem"
+                >Learn More</a
+              >
+            </div>
+          </div>
+          <div class="program-card">
+            <div
+              class="program-img"
+              style="background: url('/img/mobile.jpg') center/cover"
+            ></div>
+            <div class="program-content">
+              <h3>Mobile Diagnostics</h3>
+              <p></p>
+              <p>
+                Accessible vision testing through smartphone apps and community
+                tools
+              </p>
+              <a href="#" class="btn btn-outline" style="margin-top: 1rem"
+                >Learn More</a
+              >
+            </div>
+          </div>
+          <div class="program-card">
+            <div
+              class="program-img"
+              style="background: url('/img/radio.jpg') center/cover"
+            ></div>
+            <div class="program-content">
+              <h3>Quality Distribution</h3>
+              <p>
+                Verified distribution of reading glasses through trusted local
+                channels
+              </p>
+              <a href="#" class="btn btn-outline" style="margin-top: 1rem"
+                >Learn More</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
     <div
       id="qlwapp"
       class="qlwapp-free qlwapp-button qlwapp-bottom-right qlwapp-all qlwapp-square qlwapp-js-ready desktop"
