added different glasses on the hero sections of all pages

--- a/approach.html
+++ b/approach.html
@@ -97,8 +97,13 @@
       <!-- <a href="#donate" class="btn btn-secondary">Donate Now</a> -->
     </div>
     <div class="menu-overlay" id="menuOverlay"></div>
-
-    <div class="distribution-model" id="approach">
+    <!-- About Section -->
+    <section class="jumbotrona">
+      <div class="jumbotron-contenta">
+        <p>Distribution Approach page</p>
+      </div>
+    </section>
+    <div class="distribution-model">
       <h2>Our Distribution Approach</h2>
       <div class="distribution-steps">
         <div class="step">
