--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,12 @@
       <!-- <a href="#donate" class="btn btn-secondary">Donate Now</a> -->
     </div>
     <div class="menu-overlay" id="menuOverlay"></div>
-
+    <!-- About Section -->
+    <section class="jumbotron1">
+      <div class="jumbotron-content1">
+        <p>Contact us page</p>
+      </div>
+    </section>
     <!-- Contact Section -->
     <section class="section" id="contact">
       <div class="container contact-container">
