--- a/get-involved.html
+++ b/get-involved.html
@@ -96,9 +96,14 @@
       <!-- <a href="#donate" class="btn btn-secondary">Donate Now</a> -->
     </div>
     <div class="menu-overlay" id="menuOverlay"></div>
-
+    <!-- About Section -->
+    <section class="jumbotron2">
+      <div class="jumbotron-content2">
+        <p>Get Involved</p>
+      </div>
+    </section>
     <!-- Get Involved Section -->
-    <section class="get-involved" id="get-involved">
+    <section class="get-involved">
       <div class="container">
         <h2>Get Involved</h2>
         <p>Join us in making vision care accessible to everyone in Uganda</p>
