--- a/about.html
+++ b/about.html
@@ -98,7 +98,13 @@
     <div class="menu-overlay" id="menuOverlay"></div>
 
     <!-- About Section -->
-    <section class="about" id="about">
+    <section class="jumbotron">
+      <div class="jumbotron-content">
+        <p>About us page</p>
+      </div>
+    </section>
+
+    <section class="about">
       <div class="container">
         <div class="about-content">
           <div class="about-text">
