--- a/glasses.html
+++ b/glasses.html
@@ -96,7 +96,12 @@
       <!-- <a href="#donate" class="btn btn-secondary">Donate Now</a> -->
     </div>
     <div class="menu-overlay" id="menuOverlay"></div>
-
+    <!-- About Section -->
+    <section class="jumbotrong">
+      <div class="jumbotron-contentg">
+        <p>Explore our glasses</p>
+      </div>
+    </section>
     <!-- Gallery Section -->
     <section class="gallery" id="gallery">
       <div class="container">
