adde the off-canvas-menu

--- a/about.html
+++ b/about.html
@@ -85,13 +85,13 @@
     <!-- Off-Canvas Menu for Mobile -->
     <div class="off-canvas-menu" id="offCanvasMenu">
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#programs">Programs</a></li>
-        <li><a href="#gallery">Glasses</a></li>
-        <li><a href="#get-involved">Get Involved</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="approach.html">Approach</a></li>
+        <li><a href="programs.html">Programs</a></li>
+        <li><a href="glasses.html">Glasses</a></li>
+        <li><a href="get-involved.html">Get Involved</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <!-- <a href="#donate" class="btn btn-secondary">Donate Now</a> -->
     </div>
