--- a/approach.html
+++ b/approach.html
@@ -100,7 +100,7 @@
     <!-- About Section -->
     <section class="jumbotrona">
       <div class="jumbotron-contenta">
-        <p>Distribution Approach page</p>
+        <p>Distribution Approach Page</p>
       </div>
     </section>
     <div class="distribution-model">
