edited the mobile menu

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
       </div>
     </section>
     <!-- Contact Section -->
-    <section class="section" id="contact">
+    <section class="section">
       <div class="container contact-container">
         <!-- Contact Form -->
         <div class="contact-column contact-form">
