--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="menu-overlay" id="menuOverlay"></div>
 
     <!-- Hero Section -->
-    <section class="hero" id="home">
+    <section class="hero">
       <div class="container">
         <div class="hero-content">
           <h1>Sante Initiative</h1>
