--- a/programs.html
+++ b/programs.html
@@ -104,7 +104,7 @@
       </div>
     </section>
     <!-- Programs Section -->
-    <section class="programs" id="programs">
+    <section class="programs">
       <div class="container">
         <h2>Our Programs</h2>
         <div class="program-cards">
