--- a/get-involved.html
+++ b/get-involved.html
@@ -175,6 +175,7 @@
               solutions.
             </p>
             <div class="social-links">
+              <a href="#"><i class="fab fa-tiktok"></i></a>
               <a href="#"><i class="fab fa-facebook-f"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
