--- a/index.html
+++ b/index.html
@@ -109,10 +109,6 @@
             <strong>accessible diagnostic tools</strong>, and
             <strong>quality-assured distribution</strong>.
           </p>
-          <!-- <div class="hero-btns">
-            <a href="#get-involved" class="btn btn-primary">Get Involved</a>
-            <a href="#about" class="btn btn-outline">Learn More</a>
-          </div> -->
         </div>
       </div>
     </section>
@@ -150,6 +146,7 @@
               solutions.
             </p>
             <div class="social-links">
+              <a href="#"><i class="fab fa-tiktok"></i></a>
               <a href="#"><i class="fab fa-facebook-f"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
