--- a/approach.html
+++ b/approach.html
@@ -216,8 +216,7 @@
         </div>
         <div class="copyright">
           <p>
-            &copy; <span id="year"></span> Sante Initiative. All Rights
-            Reserved.
+            &copy; <span id="year"></span> Sante Initiative.All Rights Reserved.
           </p>
         </div>
       </div>
