--- a/about.html
+++ b/about.html
@@ -43,15 +43,15 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="img/favicon//favicon-32x32.png"
+      href="img/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="img/favicon//favicon-16x16.png"
+      href="img/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="img/favicon//site.webmanifest" />
+    <link rel="manifest" href="img/favicon/site.webmanifest" />
   </head>
   <body>
     <!-- Header with Improved Navigation -->
